--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 /* src/App.css */
 /* Styling for the body */
 body {
-  /* Background image properties */
   background-image: url('/public/image/home.jpg');
   background-size: cover;
   background-position: center;
@@ -33,20 +32,20 @@ body {
 
 /* Styling for the main heading */
 h1 {
-  color: #f4f6f6;
-  text-align: center;
-  font-family: 'Segoe UI', sans-serif;
-} 
+      color: #f8f8f7;
+    text-shadow: 0 0 10px #2073ef, 0 0 20px #0048ff, 0 0 30px #00bbff; 
+}
 
-  /* Styling for paragraphs */
+ /* Styling for paragraphs */
 p {
   color: #fafcff;
+  text-shadow: 0 0 10px #2073ef, 0 0 20px #0048ff, 0 0 30px #00bbff;
   text-align: center;
   padding: 10px;
   white-space: nowrap;
   overflow: hidden;
   border-right: 2px solid #fafcff; 
-  animation: typing 3s steps(40); /* Reference Youtube Video  */
+  animation: typing 5s steps(40); /* Reference Youtube Video  */
 }
 
 @keyframes typing {
@@ -66,7 +65,6 @@ p {
   border-radius: 25px;
   transition: transform 0.5s ease;
   margin-bottom: 3em;
-  
 }
 
 /* Welcome container hover effect */
