--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@ body {
 
 /* Styling for the title container */
 .container {
+  display:flex;
   width: 400px;
   height: auto;
   padding: 20px;
@@ -72,3 +73,9 @@ p {
   transform: scale(1.05);
 }
 
+/* Small screens */
+@media all and (max-width: 500px) {
+  .navigation {
+    flex-direction: column;
+  }
+}
